# revewz-dapp

./: craco.config.js  package-lock.json  package.json  tailwind.config.js
program/: Cargo.toml
program/src/: lib.rs
public/: index.html
src/: App.less  App.tsx  index.css  manifest.json  routes.tsx
src/components/AddReview/: index.tsx
src/components/CurrentUserBadge/: index.tsx
src/components/FeaturesSection/: index.tsx
src/components/Header/: index.tsx
src/components/Layout/: index.tsx
src/components/ModalAlert/: index.tsx
src/components/ReviewSearchbox/: index.tsx  reviewForm.css
src/components/SignupForm/: index.tsx  signupform.css
src/components/models/: index.ts
src/constants/: labels.ts
src/contexts/: ipfsContext.tsx  wallet.tsx
src/models/common/: common.tsx
src/utils/: listbox.tsx
src/views/home/: home.css  index.tsx
src/wallet-adapters/phantom/: index.tsx
src/wallet-adapters/solong/: index.tsx
