[package]
name = "revewz review system program"
version = "0.0.1"
edition = "2021"
authurs = "Revewz Team - All rights reserved info@revewz.io"
publish = false

[dependencies]
solana-program = "1.6.7"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
